--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "removeComments": true,
     "preserveConstEnums": true,
     "strict": true,
+    "target": "es2015",
     "outDir": "dist"
   },
   "include": ["."]
