--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
   "type": "commonjs",
   "devDependencies": {
     "@types/node": "^18.7.3",
+    "@types/node-fetch": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "eslint": "^8.22.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.7"
   }
 }
