--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "log4js": "^6.6.1"
+    "log4js": "^6.6.1",
+    "md-conv": "^0.0.27"
   }
 }
