--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "classnames": "^2.3.2",
     "cra-template": "1.2.0",
+    "jquery": "^3.6.1",
     "md-conv": "^0.0.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
